# RastaConverter

./: .gitignore  .gitignore.bak  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BUILD.md  CLEAN  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ChangeLog.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  PGO_BUILD.md  README.md  RastaConverter.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  blend_mode_implementation.txt  build-pgo.bat  build-pgo.sh  build-static-pgo.sh  build.bat  build.ps1  build.sh  check_dependencies.cmake  check_libraries.bat  config.env  dual_mode_implementation.txt  dual_mode_implementation_plan.md  help.txt  index.html  params.json  rasta.vcxproj  rasta.vcxproj.filters  setup-env.bat  setup-env.sh  test.bat  test.off  vcpkg.json
!old-src/: EpochTypes.h  ErrorConstants.h  Evaluator.cpp  Evaluator.h  LineCache.h  TargetPicture.h  config.cpp  config.h  main.cpp  main.h  port.h  rasta.cpp  rasta.h  rgb.cpp
Comparison/: 15.1-icx.csv  csv_score_aggregator.py  run.bat  v07.csv  v10.csv  v11.csv  v13.csv  v15-icx.csv  v15-msvc.csv  v16-icx-pgo.csv  v17.csv  v18.csv  v4.csv
Generator/: !log.txt  build.bat  no_name.asq  no_name.asq.bak  no_name.h  output.mch  output.png.csv  output.png.mic  output.png.opt  output.png.optstate  output.png.pmg  output.png.rp  output.png.rp.ini  output.xex
GeneratorDual/: !log.txt  build.bat  mads  no_name.asq  no_name.asq.bak  out_dual.xex  output.png_A.mic  output.png_A.opt  output.png_A.pmg  output.png_A.rp  output.png_A.rp.ini  output.png_B.mic  output.png_B.opt  output.png_B.opt.ini  output.png_B.pmg  output.png_B.rp
Palettes/: g2f.act  laoo.act  ntsc.act
assets/: README.md
cmake/: FindFreeImage.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake
evaluation/: experiment.py
src/: CommandLineParser.cpp  CommandLineParser.h  Distance.cpp  Distance.h  EpochTypes.h  ErrorConstants.h  Evaluator.cpp  Evaluator.h  InsnSequenceCache.h  LinearAllocator.h  Makefile  OnOffMap.h  Program.h  RastaConsole.cpp  RastaConsole.h  RastaConverter.common.settings  RastaConverter.cpp  RastaConverter.h  RastaConverter.sln  RastaConverter.vcproj  RastaConverter.vcxproj  RastaConverter.vcxproj.filters  RastaSDL.cpp  RastaSDL.h  TargetPicture.cpp  TargetPicture.h  config.cpp  config.env  config.h  cycle_map.c  cycle_map.h  gui.h  main.cpp  main.h  mt19937int.cpp  mt19937int.h  output.mch  packages.config  pch.h  port.h  (+6 more)
src/Palettes/: altirra_old.act
src/app/: CommandLineParser.cpp  CommandLineParser.h  RastaConverter.IO.cpp  RastaConverter.Init.cpp  RastaConverter.MainLoop.cpp  RastaConverter.OnOff.cpp  RastaConverter.ProcessInit.cpp  RastaConverter.Save.cpp  RastaConverter.UI.cpp  RastaConverter.h  config.cpp  config.h  main.cpp
src/cache/: InsnSequenceCache.h  LineCache.cpp  LineCache.h
src/color/: Distance.cpp  Distance.h  rgb.cpp  rgb.h
src/common/: pch.h
src/config/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  config.cpp  config.h
src/core/: Cycles.cpp  Evaluator.cpp  Evaluator.h  LineCache.h  LinearAllocator.h  Program.cpp  Program.h  RastaDual.cpp  RegisterState.h  TargetPicture.cpp  debug_log.h  rasta.cpp  rasta.h
src/core/dual/: RastaDual_DataIO.cpp  RastaDual_Display.cpp  RastaDual_InputTargets.cpp  RastaDual_MainLoop.cpp  RastaDual_Tables.cpp
src/execution/: Executor.cpp  Executor.h  SpriteManager.cpp  SpriteManager.h
src/frontend/common/: gui.h
src/frontend/console/: RastaConsole.cpp  RastaConsole.h
src/frontend/gui/: RastaSDL.cpp  RastaSDL.h  WindowIconHelper.cpp  WindowIconHelper.h  WindowIconHelper_Mac.cpp  WindowIconHelper_Mac.h  WindowIconHelper_Win32.cpp  WindowIconHelper_Win32.h
src/io/: ImageProcessor.cpp  ImageProcessor.h  OutputManager.cpp  OutputManager.h
src/mutation/: Mutator.h  RasterMutator.cpp  RasterMutator.h
src/optimization/: AcceptancePolicy.cpp  AcceptancePolicy.h  CoreEvaluator.cpp  CoreEvaluator.h  DLAS.cpp  DLAS.h  EvaluationContext.cpp  EvaluationContext.h  LAHC.cpp  LAHC.h  OptimizationController.cpp  OptimizationController.h  OptimizationRunner.cpp  OptimizationRunner.h  Optimizer.h
src/platform/: ConsoleCtrlWin.h  EpochTypes.h  ErrorConstants.h
src/platform/win/: ConsoleCtrlWin.cpp  ConsoleCtrlWin.h
src/raster/: OnOffMap.h  Program.cpp  Program.h  RasterInstruction.h  RasterProgramGenerator.cpp  RasterProgramGenerator.h  RegisterState.h
src/rng/: prng_xoroshiro.cpp  prng_xoroshiro.h
src/ui/: RastaConsole.cpp  RastaConsole.h  RastaSDL.cpp  RastaSDL.h  gui.h
src/utils/: LinearAllocator.h  RandomUtils.h  mt19937int.cpp  mt19937int.h  port.h  string_conv.h
wiki/: FAQ.md
